@@ -5,6 +5,7 @@
 	: Bind "C-c SPC" to semantic-ia-complete-symbol-menu in
 	window-system, or semantic-ia-complete-symbol in console.
 	: Add (global-ede-mode 1).
+	: Enable global-semantic-tag-folding-mode.
 
 	* init-basic.el (emacs-lisp-mode-hook): Turn off auto-fill-mode in
 	emacs-lisp-mode.
